// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginSpecs should render properly 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between space-4"
  >
    <div
      class="flex space-x-4 text-sm divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="flex"
      >
        <div
          class="flex flex-col pr-6"
        >
          <span
            class="font-bold text-theme-secondary-400"
          >
            Author
          </span>
          <div
            class="flex items-center"
          >
            <span
              class="font-bold text-theme-secondary-600"
            >
              ARK Ecosystem
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex px-6"
      >
        <div
          class="flex flex-col undefined"
        >
          <span
            class="font-bold text-theme-secondary-400"
          >
            Category
          </span>
          <span
            class="font-bold text-theme-secondary-600"
          >
            Utility
          </span>
        </div>
      </div>
      <div
        class="flex px-6"
      >
        <div
          class="flex flex-col"
        >
          <div
            class="font-bold text-theme-secondary-400"
          >
            URL
          </div>
          <a
            class="font-bold text-theme-primary-600"
            data-testid="PluginSpecs__url"
            href="/"
          >
            github.com
          </a>
        </div>
      </div>
    </div>
    <div
      class="flex space-x-4 text-sm divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="flex pl-6"
      >
        <div
          class="flex flex-col text-right"
          data-testid="PluginSpecs__version"
        >
          <span
            class="font-bold text-theme-secondary-400"
          >
            Version
          </span>
          <span
            class="font-bold text-theme-secondary-600"
          >
            1.3.8
          </span>
        </div>
      </div>
      <div
        class="flex pl-6"
      >
        <div
          class="flex flex-col text-right"
          data-testid="PluginSpecs__size"
        >
          <span
            class="font-bold text-theme-secondary-400"
          >
            Size
          </span>
          <span
            class="font-bold text-theme-secondary-600"
          >
            4.2 Mb
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginSpecs should render without url and size 1`] = `
<DocumentFragment>
  <div
    class="flex justify-between space-4"
  >
    <div
      class="flex space-x-4 text-sm divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="flex"
      >
        <div
          class="flex flex-col pr-6"
        >
          <span
            class="font-bold text-theme-secondary-400"
          >
            Author
          </span>
          <div
            class="flex items-center"
          >
            <span
              class="font-bold text-theme-secondary-600"
            >
              ARK Ecosystem
            </span>
            <div
              class="ml-2"
              data-testid="PluginSpecss__official"
            >
              <div
                class="sc-bdfBwQ fPrsah"
                height="1em"
                width="1em"
              >
                <svg>
                  official-ark-plugin.svg
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex px-6"
      >
        <div
          class="flex flex-col undefined"
        >
          <span
            class="font-bold text-theme-secondary-400"
          >
            Category
          </span>
          <span
            class="font-bold text-theme-secondary-600"
          >
            Utility
          </span>
        </div>
      </div>
      <div
        class="flex px-6"
      >
        <div
          class="flex flex-col undefined"
          data-testid="PluginSpecs__url"
        >
          <span
            class="font-bold text-theme-secondary-400"
          >
            URL
          </span>
          <span
            class="font-bold text-theme-secondary-600"
          >
            N/A
          </span>
        </div>
      </div>
    </div>
    <div
      class="flex space-x-4 text-sm divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <div
        class="flex pl-6"
      >
        <div
          class="flex flex-col text-right"
          data-testid="PluginSpecs__version"
        >
          <span
            class="font-bold text-theme-secondary-400"
          >
            Version
          </span>
          <span
            class="font-bold text-theme-secondary-600"
          >
            1.3.8
          </span>
        </div>
      </div>
      <div
        class="flex pl-6"
      >
        <div
          class="flex flex-col text-right"
          data-testid="PluginSpecs__size"
        >
          <span
            class="font-bold text-theme-secondary-400"
          >
            Size
          </span>
          <span
            class="font-bold text-theme-secondary-600"
          >
            N/A
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
